<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        tools:context="com.akash.rohonfancy.view_presenter.place_order.PlaceOrder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:text="@string/orderDetails"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="Details here"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/message"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnWhatsAppPlaceOrder"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:background="@drawable/whatsapp" />

            <Button
                android:id="@+id/btnGmailPlaceOrder"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginStart="5dp"
                android:background="@drawable/gmail" />

            <Button
                android:id="@+id/btnMessagePlaceOrder"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginStart="5dp"
                android:background="@drawable/messaging" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:text="@string/payment"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:lineSpacingExtra="2sp"
            android:text="@string/bankDetails"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:lineSpacingExtra="2sp"
            android:text="@string/paytm"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>